--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Chanwoo Lee"
-  avatar           : "Bio"# 사진 넣기
-  bio              : "Links:"
+  avatar           : "profile.png"# 사진 넣기
+  bio              : "Related Links:"
   location         : 
   employer         :
   pubmed           : 
