--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Chanwoo Lee"
   avatar           : "profile.png"# 사진 넣기
-  bio              : "PhD Student [br] Department of Philosophy [br] UC Davis"
+  bio              : "Philosophy, UC Davis"
   location         : 
   employer         :
   pubmed           : 
