--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Chanwoo Lee"
 title_separator          : "-"
-name                     : &name "Chanwoo Lee"
-description              : &description "personal description"
+name                     : "Chanwoo Lee" #&name 
+description              :  "Chanwoo Lee's professional philosophy homepage" # &description
 url                      : https://chanwoo-lee-phil.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "chanwoo-lee-phil/chanwoo-lee-phil.github.io"
