--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Chanwoo Lee"
-  avatar           : "Small.jpg"# 사진 넣기
+  avatar           : "Small_2.jpg"# 사진 넣기
   bio              : "Philosophy, UC Davis"
   location         : 
   employer         :
