--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   departmentpage   : "https://philosophy.ucdavis.edu/people/clee5576/"
   philpapers        : "https://philpeople.org/profiles/chanwoo-lee"
   googlescholar    : "https://scholar.google.com/citations?user=T-aPWowAAAAJ"
-  email            : "owclee@ucdavis.edu"
+  email            : "chanwoo.lee.phil@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
