--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,9 @@ main:
     
   - title: "CV"
     url: /cv/
+
+  - title: "자료"
+    url: /resources-k/
     
   #- title: "Guide"
   #  url: /markdown/
