--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Chanwoo Lee"
   avatar           : "Small_2.jpg"# 사진 넣기
-  bio              : "Philosophy, UC Davis"
+  bio              : "Philosopher"
   location         : 
   employer         :
   pubmed           : 
