--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "이찬우 Chanwoo Lee"
+  name             : "Chanwoo Lee"
   avatar           : "Small_2.jpg"# 사진 넣기
   bio              : "Philosopher"
   location         : 
