--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : 
   employer         :
   pubmed           : 
-  departmentpage   : 
+  departmentpage   : "https://ajou.ac.kr/uc-en/faculty01.do?mode=view&empl_no=$cms$EwBmFYEYRA2Wg&mngt_no=$cms$EwBmFYEYRA2Wg&uniCd=h&deptCd=$cms$CIZQDAzGCMZA&cate=1"
   philpapers        : "https://philpeople.org/profiles/chanwoo-lee"
   googlescholar    : "https://scholar.google.com/citations?user=T-aPWowAAAAJ"
   email            : "chanwoo.lee.phil@gmail.com"
